--- a/package.json
+++ b/package.json
@@ -92,41 +92,41 @@
 		"workspace-generator": "nx workspace-generator"
 	},
 	"dependencies": {
-		"@angular/animations": "16.2.12",
-		"@angular/cdk": "16.2.14",
-		"@angular/common": "16.2.12",
-		"@angular/compiler": "16.2.12",
-		"@angular/core": "16.2.12",
-		"@angular/forms": "16.2.12",
-		"@angular/material": "16.2.14",
-		"@angular/platform-browser": "16.2.12",
-		"@angular/platform-browser-dynamic": "16.2.12",
-		"@angular/router": "16.2.12",
-		"@fortawesome/angular-fontawesome": "^0.12.1",
-		"@fortawesome/fontawesome-svg-core": "^6.3.0",
-		"@fortawesome/free-brands-svg-icons": "^6.3.0",
-		"@fortawesome/free-solid-svg-icons": "^6.3.0",
+		"@angular/animations": "17.3.1",
+		"@angular/cdk": "17.3.1",
+		"@angular/common": "17.3.1",
+		"@angular/compiler": "17.3.1",
+		"@angular/core": "17.3.1",
+		"@angular/forms": "17.3.1",
+		"@angular/material": "17.3.1",
+		"@angular/platform-browser": "17.3.1",
+		"@angular/platform-browser-dynamic": "17.3.1",
+		"@angular/router": "17.3.1",
+		"@fortawesome/angular-fontawesome": "^0.14.1",
+		"@fortawesome/fontawesome-svg-core": "^6.5.1",
+		"@fortawesome/free-brands-svg-icons": "^6.5.1",
+		"@fortawesome/free-solid-svg-icons": "^6.5.1",
 		"@nx/angular": "17.3.2",
-		"core-js": "~3.28.0",
-		"js-base64": "^3.7.5",
-		"rxjs": "~7.8.0",
-		"tslib": "^2.5.0",
-		"zone.js": "0.13.3"
+		"core-js": "~3.36.1",
+		"js-base64": "^3.7.7",
+		"rxjs": "~7.8.1",
+		"tslib": "^2.6.2",
+		"zone.js": "0.14.4"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "16.2.12",
-		"@angular-devkit/core": "16.2.12",
-		"@angular-devkit/schematics": "16.2.12",
-		"@angular-eslint/builder": "^15.2.1",
-		"@angular-eslint/eslint-plugin": "16.0.3",
-		"@angular-eslint/eslint-plugin-template": "16.0.3",
-		"@angular-eslint/schematics": "^15.2.1",
-		"@angular-eslint/template-parser": "16.0.3",
-		"@angular/cli": "~16.2.0",
-		"@angular/compiler-cli": "16.2.12",
-		"@angular/language-service": "16.2.12",
-		"@commitlint/cli": "~17.4.4",
-		"@commitlint/config-conventional": "~17.4.4",
+		"@angular-devkit/build-angular": "17.3.1",
+		"@angular-devkit/core": "17.3.1",
+		"@angular-devkit/schematics": "17.3.1",
+		"@angular-eslint/builder": "^17.3.0",
+		"@angular-eslint/eslint-plugin": "^17.3.0",
+		"@angular-eslint/eslint-plugin-template": "^17.3.0",
+		"@angular-eslint/schematics": "^17.3.0",
+		"@angular-eslint/template-parser": "17.3.0",
+		"@angular/cli": "~17.3.1",
+		"@angular/compiler-cli": "17.3.1",
+		"@angular/language-service": "17.3.1",
+		"@commitlint/cli": "~19.2.1",
+		"@commitlint/config-conventional": "~19.1.0",
 		"@nx/workspace": "17.3.2",
 		"@nx/js": "17.3.2",
 		"@nx/web": "17.3.2",
@@ -135,60 +135,60 @@
 		"@nx/eslint-plugin": "17.3.2",
 		"@nx/jest": "17.3.2",
 		"@nx/node": "17.3.2",
-		"@schematics/angular": "16.2.12",
-		"@types/jest": "29.4.4",
+		"@schematics/angular": "17.3.1",
+		"@types/jest": "29.5.12",
 		"@types/js-base64": "~3.3.1",
-		"@types/node": "18.14.1",
-		"@typescript-eslint/eslint-plugin": "5.62.0",
-		"@typescript-eslint/parser": "5.62.0",
-		"compression-webpack-plugin": "^10.0.0",
-		"cpy-cli": "^4.2.0",
-		"cypress": "^13.0.0",
-		"dotenv": "16.0.3",
-		"eslint": "8.46.0",
-		"eslint-config-prettier": "~8.6.0",
+		"@types/node": "20.11.30",
+		"@typescript-eslint/eslint-plugin": "7.3.1",
+		"@typescript-eslint/parser": "7.3.1",
+		"compression-webpack-plugin": "^11.1.0",
+		"cpy-cli": "^5.0.0",
+		"cypress": "^13.7.1",
+		"dotenv": "16.4.5",
+		"eslint": "8.57.0",
+		"eslint-config-prettier": "~9.1.0",
 		"eslint-plugin-cypress": "2.15.1",
-		"eslint-plugin-import": "^2.27.5",
-		"eslint-plugin-jsdoc": "^40.0.0",
+		"eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-jsdoc": "^48.2.1",
 		"eslint-plugin-prefer-arrow": "^1.2.3",
-		"eslint-plugin-prettier": "~4.2.1",
+		"eslint-plugin-prettier": "~5.1.3",
 		"eslint-plugin-react": "latest",
-		"husky": "^8.0.3",
-		"jest": "29.4.3",
-		"jest-environment-jsdom": "29.4.3",
-		"jest-preset-angular": "13.1.6",
-		"lint-staged": "~13.1.2",
-		"markdownlint": "^0.27.0",
-		"markdownlint-cli": "^0.33.0",
-		"ng-packagr": "16.2.3",
-		"npm-check-updates": "~16.7.9",
-		"nx": "17.3.2",
+		"husky": "^9.0.11",
+		"jest": "29.7.0",
+		"jest-environment-jsdom": "29.7.0",
+		"jest-preset-angular": "14.0.3",
+		"lint-staged": "~15.2.2",
+		"markdownlint": "^0.34.0",
+		"markdownlint-cli": "^0.39.0",
+		"ng-packagr": "17.3.0",
+		"npm-check-updates": "~16.14.17",
+		"nx": "18.1.2",
 		"pinst": "^3.0.0",
-		"postcss": "^8.4.21",
-		"postcss-import": "15.1.0",
-		"postcss-preset-env": "8.0.1",
-		"postcss-scss": "^4.0.6",
+		"postcss": "^8.4.38",
+		"postcss-import": "16.1.0",
+		"postcss-preset-env": "9.5.2",
+		"postcss-scss": "^4.0.9",
 		"postcss-url": "10.1.3",
-		"prettier": "2.8.4",
-		"remark": "~14.0.2",
-		"remark-cli": "~11.0.0",
-		"remark-lint": "~9.1.1",
-		"remark-lint-maximum-line-length": "~3.1.2",
-		"remark-preset-lint-consistent": "~5.1.1",
-		"remark-preset-lint-recommended": "~6.1.2",
-		"rimraf": "~4.1.2",
-		"rollup": "~3.17.3",
-		"rollup-plugin-gzip": "~3.1.0",
+		"prettier": "3.2.5",
+		"remark": "~15.0.1",
+		"remark-cli": "~12.0.0",
+		"remark-lint": "~9.1.2",
+		"remark-lint-maximum-line-length": "~3.1.3",
+		"remark-preset-lint-consistent": "~5.1.2",
+		"remark-preset-lint-recommended": "~6.1.3",
+		"rimraf": "~5.0.5",
+		"rollup": "~4.13.0",
+		"rollup-plugin-gzip": "~3.1.2",
 		"rollup-plugin-terser": "~7.0.2",
 		"standard-version": "~9.5.0",
-		"stylelint": "~15.2.0",
+		"stylelint": "~16.2.1",
 		"stylelint-config-prettier": "~9.0.5",
-		"stylelint-prettier": "~3.0.0",
+		"stylelint-prettier": "~5.0.0",
 		"ts-jest": "29.1.2",
-		"ts-node": "10.9.1",
-		"typedoc": "~0.23.25",
-		"typescript": "5.1.6",
-		"webpack-bundle-analyzer": "~4.8.0",
+		"ts-node": "10.9.2",
+		"typedoc": "~0.25.12",
+		"typescript": "^5.4.3",
+		"webpack-bundle-analyzer": "~4.10.1",
 		"yaml-lint": "^1.7.0"
 	}
 }
